--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "atm-finder",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "react-scripts": "1.0.17"
+  },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
