--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "foundation-icons": "^1.0.1",
+    "foundation-sites": "^6.4.4-rc1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
